# real-reel-world

./: .gitignore  README.md  brave_index.py  clis.sh  cymem-2.0.8-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  docker-compose.db.yml  docker-compose.yml  fal_client.py  fal_run.py  main.py  models.py  pyproject.toml  streamlit_app.py  streamlit_poe.py
app/: app.py  streamlit_app.py
assets/: search_result_20240406_200804.json  search_result_20240406_200921.json  search_result_20240406_204730.json  search_result_20240406_204838.json  search_result_20240406_204851.json  search_result_20240406_230103.json  summary_prompt.txt
prompts/: real-reel.py
scripts/: brave.py  constants.py  fal.py  poe_server_bot.py  url_summarizers.py  utils.py
