[tool.poetry]
name = "poe-fal-brave"
version = "0.1.0"
description = ""
authors = ["Matthew Mo <28805779+supermomo668@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fal-client = "^0.2.2"
fastapi = "^0.110.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
