[tool.poetry]
name = "poe-fal-brave"
version = "0.1.0"
description = ""
authors = ["Matthew Mo <28805779+supermomo668@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fal-client = "^0.2.2"
streamlit = "^1.33.0"
st-files-connection = "^0.1.0"
loguru = "^0.7.2"
boto3 = "^1.34.79"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
langchain-community = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
