[tool.poetry]
name = "poe-fal-brave"
version = "0.1.0"
description = ""
authors = ["Matthew Mo <28805779+supermomo668@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
asyncpg = "^0.29.0"
aiohttp = "^3.9.3"
fal_client = "*"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
